kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-demo-api
  namespace: secure-demo
  labels:
    app.kubernetes.io/name: secure-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: secure-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: secure-demo
    spec:
      serviceAccountName: secure-demo-sa
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        fsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: 000000000000.dkr.ecr.us-east-1.amazonaws.com/aws-eks-secure-delivery-detection-lab-dev-api:placeholder
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            privileged: false
            capabilities:
              drop:
                - ALL
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
